--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.11.2",
+    "canvas-confetti": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/node": "^20.5.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.5.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.0",
+    "vite": "^5.0.8"
   },
   "engines": {
     "node": ">=18.0.0"
